Updates from Lab 2

--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,10 @@
 /* applies to anything of class "example-class-selector" */
-.projects {
+.project {
 	margin-left: 20px;
+    font-size: 20px;
+    border: 5px;
+    border-style: dotted;
+    padding: 20px;
 }
 
 /* applies to any <p> descendants of an element of class "example-class-selector" */
@@ -14,11 +18,34 @@
 body {
      border: 1px dotted gray;
      padding: 20px;
-}
+ }
 
 .jumbotron-container {
 	position: relative;
-     margin-top: 50px;
-     margin-bottom: 20px;
-     padding: 20px;
+    margin-top: 50px;
+    margin-bottom: 20px;
+    padding: 20px;
+}
+
+p{
+    font-family: Helvetica;
+    font-size: 14px;
+}
+
+h1{
+    font-family: Arial;
+
+}
+
+
+#about{
+    font-family: Arial ;
+    font-size: 14px;
+}
+
+#profile{
+    border: 5px;
+    border-style: solid;
+    padding: 20px;
+
 }
